  Some javadoc improvements, continued
  EntityConnection.TYPE and getType() removed
  EntityConnectionProvider.getConnectionType() now returns a String
  Some code cleanup and javadoc improvements
  Entity.Definition.getResultPacker() removed, EntityResultPacker moved to DefaultLocalEntityConnection
  DefaultLocalEntityConnection.iterator() now synchronizes on connection
  Domain, minor refactoring of KeyGenerators
  Control bug fixed, did not initialize enabled status according to enabledState
  Controls.ToggleControl bug fixed, buttonModel enabled status did not follow enabledState
  Entity.getLong() added
  EntityApplicationPanel, removed ctr abbreviations
  Controls.toggleControl() overloaded with icon parameter, plus some misc. refactoring and javadoc improvements
  EntityEditPanel.isActive() removed, use getActiveObserver().isActive() instead
  FilteredTablePanel.isCellVisible() added
  Domain.getDefinition() is now protected instead of package private
  Entity.Definition.setKeyGenerator() now sets the key generator to the default no-op generator on receiving null as parameter instead of throwing a NullPointerException
  DefaultLocalEntityConnection.checkReadOnly() error message fixed
  Entities.getModifiedColumnProperties() includeReadOnlyProperties parameter added
  DefaultLocalEntityCollection.lockAndCheckForUpdate() no longer includes readOnly properties in the optimistic locking comparison
  Property.dateTimeFormatPattern, getDateTimeFormatter() added, used throughout, SimpleDateFormat usages removed
  FilteredTablePanel bug fixed, searchField no longer triggers search on focusLost/contentsChanged if search hint is visible
  Entity.remove(propertyId) now returns the value being removed
  SwingEntityTableModel.setForeignKeyConditionValues() no longer final
  DefaultColumnConditionModel.AUTOMATIC_WILDCARD and CASE_SENSITIVE configuration values moved to ColumnConditionModel
  NavigableImagePanel, some minor refactoring/renaming